--- a/style.css
+++ b/style.css
@@ -19,9 +19,11 @@ body {
     
     display: flex;
     flex-direction: column;
-    gap: 1.5em;
+    gap: 1.5rem;
     flex-basis: 40vw;
     flex-grow: 1;
+    flex: 1 1 40vw;
+    /* max-width: 50vw; */
 }
 
 .description {
@@ -33,7 +35,7 @@ body {
     border: solid 1px var(--main-text-color);
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 1rem;
     height: fit-content;
     width: fit-content;
 }
@@ -85,7 +87,7 @@ img {
     border: solid 1px var(--main-text-color);
 }
 
-span {
+.images {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -96,7 +98,7 @@ span {
     cursor: pointer;
     width: 5vw;
     text-align: center;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     color: var(--title-color);
     font-weight: bolder;
     font-family: 'Garamond', serif;
@@ -107,7 +109,7 @@ span {
     color: var(--hover-color);
 }
 
-.project>*:not(span) {
+.project>*:not(.images) {
     margin: 0 5vw;
 }
 
@@ -131,9 +133,17 @@ ul {
 .contact {
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 1rem;
     height: fit-content;
     width: fit-content;
+}
+
+.contact svg path {
+    fill: var(--link-color);
+}
+
+.contact svg:hover path {
+    fill: var(--hover-color);
 }
 
 header {
