--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    box-sizing: inherit;
 }
 
 :root {
@@ -13,6 +14,8 @@
 
 body {
     font-family: 'Roboto Slab', serif;
+    box-sizing: border-box;
+    background-color: var(--main-bg-color);
 }
 
 .project {
@@ -147,7 +150,7 @@ ul {
 }
 
 header {
-    margin: 4%;
+    padding: 4%;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 600;
 }
